# FinderFox

./: .gitignore  README.md  startupFile
renderer/: URLsanitiser.py  image_converter.py  main.py  pyproject.toml  render.py  state.json  state_machine.py  test.py  url_image_converter.py
renderer/converter/: converter.py  test_data.json
renderer/domreader/: domreader.py  imageDecomposition.py
renderer/input/: DS_Store
renderer/plotter/: plotter.py
scriptWriter/: writeBashContents.py
