[project]
name = "renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "bs4>=0.0.2",
    "ds-store>=1.3.1",
    "mac-alias>=2.2.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "watchdog>=6.0.0",
]
